--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,14 @@
-.card{
-    background-color:darkslategrey;
+body{
+    background-color: rgb(209, 214, 237);
 }
 .currentday-data{
     display: none;
+}
+h4{
+    display: none;
+}
+.futureday-data .card img{
+    width: 80px;
+    align-self: center;
+
 }
